err/plywood.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chomsky'...
Compiling './lib/python3.5/site-packages/chomsky/matchers.py'...
***   File "./lib/python3.5/site-packages/chomsky/matchers.py", line 533
    except ParseException, error:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chomsky-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plywood'...
Listing './lib/python3.5/site-packages/plywood/plugins'...
Compiling './lib/python3.5/site-packages/plywood/values.py'...
***   File "./lib/python3.5/site-packages/plywood/values.py", line 314
    except IndexError, KeyError:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plywood-1.11.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/__init__.py'...
***   File "./lib/python3.5/site-packages/test/__init__.py", line 87
    print 'actual:', actual
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test/test_example.py'...
***   File "./lib/python3.5/site-packages/test/test_example.py", line 17
    print diff
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
